<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightgray"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/topbar"
                    android:gravity="center"
                    android:text="@string/mini_quest"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/is_intrusion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/is_intrusion"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/who"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/is_intrusion"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" >

                    <RadioButton
                        android:id="@+id/me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/intruder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other_person"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/central"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top"
                android:orientation="vertical"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/authorized_q"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/authorized"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/authorized_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/authorized_q"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" >

                    <RadioButton
                        android:id="@+id/yes_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/no_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RadioGroup>

                <TextView
                    android:id="@+id/worried_q"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/authorized_a"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/worried"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/worried_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/worried_q"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" >

                    <RadioButton
                        android:id="@+id/yes_w"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/no_w"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/central"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/done_q"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_design"
                    android:onClick="onClickDoneButton"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:visibility="invisible" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>