<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true" >

        <Switch
            android:id="@+id/on_off"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/intrusion_detection" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/config_scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="10dp" >

        <RelativeLayout
            android:id="@+id/auric_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/mode_spinner"
                android:text="@string/device_sharing"
                android:visibility="gone" />


            <TextView
                android:id="@+id/mode_title"
                android:layout_width="fill_parent"
                android:layout_height="25sp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/sky"
                android:gravity="center"
                android:text="@string/mode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

            <Spinner
                android:id="@+id/mode_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/mode_title"
                android:layout_marginTop="14dp" />

            <TextView
                android:id="@+id/textViewEmpty"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/rate_number_picker" />

            <TextView
                android:id="@+id/rate_title"
                android:layout_width="fill_parent"
                android:layout_height="25sp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/mode_spinner"
                android:layout_marginTop="16dp"
                android:background="@color/sky"
                android:gravity="center"
                android:text="@string/rate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/rate_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rate_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/ratedesc" />

            <NumberPicker
                android:id="@+id/rate_number_picker"
                android:layout_width="50dp"
                android:layout_height="110dp"
                android:layout_below="@+id/rate_desc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/number_pictures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mode_spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/number_pictures"
                android:visibility="gone" />

            <Button
                android:id="@+id/select_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mode_spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_design"
                android:gravity="center"
                android:onClick="appsActivity"
                android:text="@string/select_apps"
                android:textColor="@color/white"
                android:visibility="gone" />

            <NumberPicker
                android:id="@+id/pictures_number_picker"
                android:layout_width="50dp"
                android:layout_height="110dp"
                android:layout_below="@+id/number_pictures"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>