<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/gear" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_centerHorizontal="true"
            android:text="@string/calendar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/orange" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/calendar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:background="@color/lightgray"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/buttonlayout"
            android:layout_width="fill_parent"
            android:layout_height="60sp"
            android:background="@drawable/topbar"
            android:gravity="left|top"
            android:height="60sp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/prevMonth"
                android:layout_width="20sp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10sp"
                android:contentDescription="@string/description"
                android:src="@drawable/calendar_left_arrow_selector" >
            </ImageView>

            <TextView
                android:id="@+id/currentMonth"
                android:layout_width="0dp"
                android:layout_height="60sp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" >
            </TextView>

            <ImageView
                android:id="@+id/nextMonth"
                android:layout_width="20sp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/description"
                android:src="@drawable/calendar_right_arrow_selector" >
            </ImageView>
        </LinearLayout>

        <GridView
            android:id="@+id/days_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7" >
        </GridView>

        <GridView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7" >
        </GridView>
    </LinearLayout>

    <CheckBox
        android:id="@+id/show_only_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/show_only_int" />

</RelativeLayout>